--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,7 +9,52 @@
   },
   "dependencies": {
     "classnames": "2.3.2",
+    "rambda": "7.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.20.2",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.18.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
+    "@types/node": "18.11.13",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "@types/webpack": "5.28.0",
+    "@types/webpack-dev-server": "4.7.2",
+    "@typescript-eslint/eslint-plugin": "5.46.0",
+    "@typescript-eslint/parser": "5.46.0",
+    "autoprefixer": "10.4.13",
+    "babel-loader": "9.1.0",
+    "core-js": "3.26.1",
+    "cross-env": "7.0.3",
+    "css-loader": "6.7.2",
+    "eslint": "8.29.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "globals": "13.18.0",
+    "html-webpack-plugin": "5.5.0",
+    "mini-css-extract-plugin": "2.7.0",
+    "postcss": "8.4.19",
+    "postcss-loader": "7.0.1",
+    "prettier": "2.8.0",
+    "react-refresh": "0.14.0",
+    "regenerator-runtime": "0.13.11",
+    "style-loader": "3.3.1",
+    "stylelint": "14.16.0",
+    "stylelint-config-css-modules": "4.1.0",
+    "stylelint-config-prettier": "9.0.4",
+    "stylelint-config-standard": "29.0.0",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.3",
+    "typescript-plugin-css-modules": "4.1.1",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.0",
+    "webpack-dev-server": "4.11.1"
   }
 }
