--- a/package.json
+++ b/package.json
@@ -17,6 +17,52 @@
     "lint": "yarn lerna run client:lint && yarn lerna run server:lint"
   },
   "devDependencies": {
-    "lerna": "^6.1.0"
+    "lerna": "^6.1.0",
+    "@commitlint/cli": "17.4.1",
+    "@commitlint/config-conventional": "17.4.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "prettier --write",
+      "eslint",
+      "yarn test --passWithNoTests"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ],
+    "*.css": [
+      "prettier --write",
+      "stylelint"
+    ]
+  },
+  "commitlint": {
+    "extends": "@commitlint/config-conventional",
+    "rules": {
+      "scope-empty": [
+        2,
+        "never"
+      ],
+      "body-max-line-length": [
+        2,
+        "always",
+        200
+      ],
+      "subject-case": [
+        2,
+        "never",
+        [
+          "start-case",
+          "pascal-case",
+          "upper-case"
+        ]
+      ],
+      "header-max-length": [
+        2,
+        "always",
+        120
+      ]
+    }
   }
 }
