--- a/package.json
+++ b/package.json
@@ -21,7 +21,29 @@
     "@commitlint/cli": "17.4.1",
     "@commitlint/config-conventional": "17.4.0",
     "husky": "8.0.3",
-    "lint-staged": "13.1.0"
+    "lint-staged": "13.1.0",
+    "eslint": "8.29.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "@typescript-eslint/eslint-plugin": "5.46.0",
+    "@typescript-eslint/parser": "5.46.0",
+    "prettier": "2.8.0",
+    "globals": "13.18.0",
+    "stylelint": "14.16.0",
+    "stylelint-config-css-modules": "4.1.0",
+    "stylelint-config-prettier": "9.0.4",
+    "stylelint-config-standard": "29.0.0",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.3",
+    "typescript-plugin-css-modules": "4.1.1",
+    "@types/node": "18.11.13",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "@types/webpack": "5.28.0",
+    "@types/webpack-dev-server": "4.7.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
