chore(client/*): lint scripts ordered

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "cross-env TS_NODE_PROJECT=\"../../tsconfig.json\" webpack --mode=production --config \"../../client.webpack.config.ts\" --define-process-env-node-env=production",
     "dev": "cross-env TS_NODE_PROJECT=\"../../tsconfig.json\" webpack serve --config \"../../client.webpack.config.ts\"",
-    "lint": "yarn eslint ./src/**/*.{ts,tsx} --fix && yarn prettier ./src/**/* --w && yarn stylelint ./src/**/*.css"
+    "lint": "yarn prettier ./src/**/* --w && yarn eslint ./src/**/*.{ts,tsx} --fix && yarn stylelint ./src/**/*.css"
   },
   "dependencies": {
     "classnames": "2.3.2",
