--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
       "prettier --write",
-      "eslint",
-      "yarn test --passWithNoTests"
+      "eslint"
     ],
     "*.{json,md}": [
       "prettier --write"
