--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.1",
   "license": "MIT",
   "scripts": {
-    "dev": "exit 0",
-    "build": "exit 0",
-    "lint": "exit 0"
+    "dev": "cross-env TS_NODE_PROJECT=\"../../tsconfig.json\" webpack --config \"../../client.webpack.config.ts\"",
+    "build": "cross-env TS_NODE_PROJECT=\"../../tsconfig.json\" webpack --mode=production --config \"../../server.webpack.config.ts\" --define-process-env-node-env=production",
+    "lint": "yarn prettier ./src/**/* --w && yarn eslint ./src/**/*.{ts,tsx} --fix"
+  },
+  "dependencies": {
+    "fastify": "4.12.0"
+  },
+  "devDependencies": {
+    "@types/webpack-node-externals": "2.5.3",
+    "webpack-node-externals": "3.0.0"
   }
 }
