--- a/package.json
+++ b/package.json
@@ -18,32 +18,32 @@
     "new-version": "yarn lerna version --conventional-commits --yes"
   },
   "devDependencies": {
-    "lerna": "^6.1.0",
-    "@commitlint/cli": "17.4.1",
-    "@commitlint/config-conventional": "17.4.0",
-    "husky": "8.0.3",
     "@babel/core": "7.20.2",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-typescript": "7.18.6",
+    "@commitlint/cli": "17.4.1",
+    "@commitlint/config-conventional": "17.4.0",
+    "@types/node": "18.11.13",
+    "@types/webpack": "5.28.0",
+    "@types/webpack-dev-server": "4.7.2",
+    "@typescript-eslint/eslint-plugin": "5.46.0",
+    "@typescript-eslint/parser": "5.46.0",
     "babel-loader": "9.1.0",
     "cross-env": "7.0.3",
-    "lint-staged": "13.1.0",
     "eslint": "8.29.0",
-    "webpack": "5.75.0",
-    "webpack-cli": "5.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "8.0.0",
-    "@typescript-eslint/eslint-plugin": "5.46.0",
-    "@typescript-eslint/parser": "5.46.0",
+    "husky": "8.0.3",
+    "lerna": "^6.4.1",
+    "lint-staged": "13.1.0",
     "prettier": "2.8.0",
     "ts-node": "10.9.1",
     "typescript": "4.9.3",
-    "@types/node": "18.11.13",
-    "@types/webpack": "5.28.0",
-    "@types/webpack-dev-server": "4.7.2"
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
